[package]
name = "vedvaring"
version = "0.1.5"
edition = "2021"
description = "easy persistence"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"
